fix: overflow on posts with code

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,6 @@ body {
   margin: 0 auto;
   max-width: var(--page-width);
   padding: 1rem 20px;
-
   display: flex;
   flex-direction: row;
 
@@ -133,6 +132,7 @@ header {
 main {
   flex: 1;
   max-width: 100%;
+  overflow-x: hidden;
   & h1:first-of-type {
     margin-top: 0;
   }
